# IMU_JNI

./: README.md
app/: CMakeLists.txt  build.gradle
app/libs/bmi160/include/: bmi160.h  bmi160_defs.h
app/libs/bmi160/src/: bmi160.c
app/src/androidTest/java/com/r1k/utilities/allanvariancesampler/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: BMI160_IMU.cpp  BMI160_IMU.h  main.cpp
app/src/main/java/com/r1k/utilities/allanvariancesampler/: MainActivity.java  SensorSample.java
app/src/main/java/com/r1k/utilities/allanvariancesampler/dummy/: DummyContent.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/r1k/utilities/allanvariancesampler/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
